Closed Bug 1372870 Opened 7 years ago Closed 7 years ago

Compiling with mingw-w64 based on GCC 6.3.0 breaks (operands to ?: have different types)

Categories

(Core :: Graphics: Layers, defect, P3)

52 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: gk, Assigned: jacek)

References

(Blocks 1 open bug)

Details

(Whiteboard: [tor][gfx-noted])

Attachments

(1 file)

Compiling with mingw-w64 based on 6.3.0 gives me the following compile error: /home/ubuntu/build/tor-browser/obj-mingw/dist/include/mozilla/layers/TextureD3D11.h: In member function 'virtual mozilla::layers::DataTextureSource* mozilla::layers::DataTextureSourceD3D11::AsDataTextureSource()': /home/ubuntu/build/tor-browser/obj-mingw/dist/include/mozilla/layers/TextureD3D11.h:240:0: error: operands to ?: have different types 'mozilla::layers::DataTextureSourceD3D11*' and 'bool' virtual DataTextureSource* AsDataTextureSource() override { return mAllowTextureUploads ? this : false; } This happens on an esr52 branch but looking at mozilla-central shows that the code in question did not change, so I guess that the issue is still there.
Summary: Compiling with mngw-w64 based on GCC 6.3.0 breaks (operands to ?: have different types) → Compiling with mingw-w64 based on GCC 6.3.0 breaks (operands to ?: have different types)
Blocks: 1330608
Whiteboard: [tor]
Attached patch fixSplinter Review
Attachment #8879888 - Flags: review?(matt.woodrow)
Attachment #8879888 - Flags: review?(matt.woodrow) → review+
Pushed by jacek@codeweavers.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/0298f22db7a5 Compiling with mingw-w64 based on GCC 6.3.0 breaks (operands to ?: have different types) r=mattwoodrow
Assignee: nobody → jacek
Status: NEW → ASSIGNED
Priority: -- → P3
Whiteboard: [tor] → [tor][gfx-noted]
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: