Bug 1372870 - Compiling with mingw-w64 based on GCC 6.3.0 breaks (operands to ?: have different types) r=mattwoodrow